deploy_enter_data.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enter-data
  labels:
    app: enter-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enter-data
  template:
    metadata:
      labels:
        app: enter-data
    spec:
      containers:
      - name: enter-data
        image: us.gcr.io/time-382620/time-enter_data
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
