deploy_mongo_db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
      - name: mongo
        image: us.gcr.io/time-382620/mongo
      volumes:
      - name: mongo-initdb
        configMap:
          name: mongo-initdb
