time_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  labels:
    app: analytics-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
      - name: analytics-service
        image: us.gcr.io/time-382620/time-analytics-service
        ports:
        - containerPort: 3000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: enter-data
  labels:
    app: enter-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enter-data
  template:
    metadata:
      labels:
        app: enter-data
    spec:
      containers:
      - name: enter-data
        image: us.gcr.io/time-382620/time-enter_data
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
      - name: mongo
        image: us.gcr.io/time-382620/mongo
      volumes:
      - name: mongo-initdb
        configMap:
          name: mongo-initdb
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
spec:
  selector:
    matchLabels:
      app: mysql-db
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
        - name: mysql-db
          image: us.gcr.io/time-382620/time-enter_data
          ports:
            - containerPort: 3306
              name: mysql-db
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodelogin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodelogin
  template:
    metadata:
      labels:
        app: nodelogin
    spec:
      containers:
      - name: nodelogin
        image: us.gcr.io/time-382620/time-nodelogin
        ports:
        - containerPort: 3001
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: view-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: view-data
  template:
    metadata:
      labels:
        app: view-data
    spec:
      containers:
      - name: view-data
        image: us.gcr.io/time-382620/time-view_data
        ports:
        - containerPort: 8004
