svc_lb_analytics_service.yml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
spec:
  selector:
    app: analytics-service
  ports:
    - name: analytics-service
      port: 3000
      targetPort: 3000
