svc_lb_enter_data.yml
apiVersion: v1
kind: Service
metadata:
  name: enter-data
spec:
  selector:
    app: enter-data
  ports:
  - name: enter-data
    port: 5000
    targetPort: 5000
