svc_lb_mongo_db.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo-db
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
