svc_lb_mysql_db.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: LoadBalancer
  selector:
    app: mysql-db
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
