svc_lb_nodelogin.yml
apiVersion: v1
kind: Service
metadata:
  name: nodelogin
spec:
  selector:
    app: nodelogin
  ports:
  - name: nodelogin
    port: 3001
    targetPort: 3001
