svc_lb_view_data.yml
apiVersion: v1
kind: Service
metadata:
  name: view-data
spec:
  type: LoadBalancer
  selector:
    app: view-data
  ports:
  - name: view-data
    port: 8004
    targetPort: 8004
