time_services.yml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
spec:
  type: LoadBalancer
  selector:
    app: analytics-service
  ports:
    - name: analytics-service
      port: 3000
      targetPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: enter-data
spec:
  type: LoadBalancer
  selector:
    app: enter-data
  ports:
  - name: enter-data
    port: 5000
    targetPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: LoadBalancer
  selector:
    app: mongo-db
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: LoadBalancer
  selector:
    app: mysql-db
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
---

apiVersion: v1
kind: Service
metadata:
  name: nodelogin
spec:
  type: LoadBalancer
  selector:
    app: nodelogin
  ports:
  - name: nodelogin
    port: 3001
    targetPort: 3001
---

apiVersion: v1
kind: Service
metadata:
  name: view-data
spec:
  type: LoadBalancer
  selector:
    app: view-data
  ports:
  - name: view-data
    port: 8004
    targetPort: 8004
