time_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /enter-data
        pathType: Prefix
        backend:
          service:
            name: enter-data
            port:
              name: enter-data
      - path: /nodelogin
        pathType: Prefix
        backend:
          service:
            name: nodelogin
            port:
              name: nodelogin
      - path: /view-data
        pathType: Prefix
        backend:
          service:
            name: view-data
            port:
              name: view-data
